java-orchestration-kubernetes-minikube/springboot-docker-kubernetes-ingress-traefik-WIP/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld-namespace
spec:
  rules:
  - host: example.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld-service
            port:
              number: 80
